# skyportal-home

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
deploy/: 60-skylanders-portal.rules  skyportal-home.service
skyportal/: app.py  config.py  controller.py  figures.py  outputs.py  portal.py
skyportal/data/: SKYLANDEX_LICENSE.txt  SOURCE.md  skylander_db.json
skyportal/static/: app.js  settings.js  style.css
skyportal/templates/: index.html  login.html  settings.html
tests/: test_app.py  test_controller.py  test_figures.py  test_outputs.py  test_portal.py
