[project]
name = "skyportal-home"
version = "1.3.0"
description = "Turn a Skylanders Portal of Power into a Govee and Home Assistant controller"
requires-python = ">=3.11"
dependencies = ["Flask==3.1.1", "hidapi==0.14.0.post4", "pyusb==1.3.1", "requests==2.33.0", "waitress==3.0.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
